<resources>
    <string name="app_name">Getrooms</string>
    <string name="welcomeid">Welcome to GetRooms</string>
    <string name="loginid">LogIn</string>
    <string name="notamemberid">Not a member?</string>
    <string name="signupid">SignUp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="contactnumber">Contact Number</string>
    <string name="category">Category</string>
    <string name="dateofbirth">Date of birth</string>
    <string name="setdate">Set Date</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="errorpassword">Password format 8char-long-A-a-@..$</string>
    <string name="erroremail">Check your email</string>
    <string name="Username">Username</string>
    <string name="Age">Age</string>
    <string name="emptyfield">Empty Field</string>
    <string name="welcome">Welcome to Home</string>
    <string name="location">Location</string>
    <string name="room_type">Room Type</string>
    <string-array name="genderarray">
        <item>SELECT GENDER</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="categoryarray">
        <item>Customer</item>
        <item>Supplier</item>
    </string-array>
    <string-array name="roomtype">
        <item>Paying_Guest</item>
        <item>Flat</item>
    </string-array>

    <string-array name="shared">
        <item>Single</item>
        <item>Double</item>
        <item>Triple</item>
    </string-array>

    <string-array name="laundry">
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string-array name="mess">
        <item>yes</item>
        <item>no</item>
    </string-array>

    <string name="title_activity_home2">Home2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_searchrooms">searchrooms</string>
    <string name="title_activity_display_listview">Result</string>
    <string name="title_activity_home">Home</string>


</resources>
